--- a/styles/default.css
+++ b/styles/default.css
@@ -1,66 +1,75 @@
-/* =============================================================================
-   Base
-   ========================================================================== */
-
-/*
- * 1. Correct text resizing oddly in IE6/7 when body font-size is set using em units
- * 2. Prevent iOS text size adjust on device orientation change, without disabling user zoom: h5bp.com/g
- */
-
-html { 
-	font-size: 100%; 
-	-webkit-text-size-adjust: 100%; 
-	-ms-text-size-adjust: 100%; 
+body {
+	padding-top:60px; /*to account for the navbar*/
 }
 
-body { 
-	font-size: 1em; 
-	line-height: 1.4;
+.container, .navbar .container{
+	width:700px;
 }
 
-/*
- * Remove text-shadow in selection highlight: h5bp.com/i
- * These selection declarations have to be separate
- * Also: hot pink! (or customize the background color to match your design)
- */
-
-::-moz-selection { text-shadow: none; }
-::selection { text-shadow: none; }
-
-/* =============================================================================
-   Layout
-   ========================================================================== */
-
-/* =============================================================================
-   Links
-   ========================================================================== */
-
-/* =============================================================================
-   Typography
-   ========================================================================== */
-
-/* =============================================================================
-   Lists
-   ========================================================================== */
-
-/* =============================================================================
-   Embedded content (Images, Movies, Figures)
-   ========================================================================== */
-
-/* =============================================================================
-   Forms
-   ========================================================================== */
-
-/* =============================================================================
-   Media Query
-   ========================================================================== */
-
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+img {
+	border:5px solid #fff;
+	-webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
+	-moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
 }
 
-/* =============================================================================
-   Print styles.
-   ========================================================================== */
+.profile img{
+	width:90px;
+	float: left;
+	margin-top: 20px;
+}
 
-@media print { }
+.profile img.blank{
+	width:100px;
+	border-width:0;
+	-webkit-box-shadow: 0 0 0 #000;
+	-moz-box-shadow: 0 0 0 #000;
+	box-shadow: 0 0 0 #000;
+}
+.profile{
+	clear:both;
+}
+.profile-content{
+	float:left;
+	min-height: 130px;
+	width: 575px;
+
+	margin: 20px 0 0 25px;
+	padding-bottom: 20px;
+	border-bottom: 1px solid #ccc;
+}
+
+.profile .contact-info{
+    display: inline-block;
+	
+    margin: 0 30px 0 0;
+}
+
+.contact-info h6{
+    display: inline-block;
+	
+    margin: 0 3px 0 0;
+}
+
+a.phone{
+	text-decoration:none;
+	color:#000;
+}
+
+small.update{
+    font-style: italic;
+	
+    color: #999;
+    font-size: .9em;
+}
+
+.expand-profile {
+	margin-top: 9px;
+}
+
+label.error{
+	color: #b94a48;
+	display: inline-block;
+	vertical-align: middle;
+	padding-left: 10px;
+}
